2008-05-09  George Peter Staplin  <georgeps@xmission.com>
	* tools/tsdPerf.c 	A loadable Tcl extension for testing TSD
	performance.
	* tools/tsdPerf.tcl	A simplistic tool that uses the thread
	extension and tsdPerf.so to get some performance metrics by,
	simulating, simple TSD contention.


2008-05-09  George Peter Staplin  <georgeps@xmission.com>

	* generic/tcl.h: 	Make Tcl_ThreadDataKey a void *.
	* generic/tclInt.h:	Change around some function names and
	 add some new per-platform declarations for thread-specific data
	 functions.
	* generic/tclThread.c:  Make use of of the new function names
	 that no longer have a Tclp prefix.	
	* generic/tclThreadStorage.c: Replace the core thread-specific data 
	(TSD) mechanism with an array offset solution that eliminates the
	hash tables, and only uses one slot of native TSD.  
	Many thanks to Kevin B. Kenny for his help with this.

	* unix/tclUnixThrd.c:	Add platform-specific TSD functions for use
	by tclThreadStorage.c. 		
	* win/tclWinThrd.c: 	Add platform-specific TSD functions for use 
	by tclThreadStorage.c.

2008-05-09  Kevin B. Kenny  <kennykb@acm.org>

	* tests/dict.test (dict-19.2): Corrected a bug where
	the test was changed to use [apply] instead of a temporary
	proc, but the cleanup script still attempted to delete
	the temporary proc.
	
2008-05-07  Donal K. Fellows  <dkf@cspool38.cs.man.ac.uk>

	* generic/tclCompCmds.c (TclCompileDictAppendCmd): Fix silly
	off-by one error that caused a crash every time a compiled 'dict
	append' with more than one argument was used. Found by Colin
	McCormack.

2008-05-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tclBasic.c:    Converted the [binary] command into an
	* generic/tclBinary.c:   ensemble.
	* generic/tclInt.h:
	* test/binary.test:      Updated the error tests for ensemble errors.

	* generic/tclFileName.c: Reverted accidental commit of TIP 316 APIs.

2008-04-27  Donal K. Fellows  <dkf@users.sf.net>
