@@ -11,7 +11,7 @@
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
  * ----------------------------------------------------------------------------
- * RCS: @(#) $Id: nmakehlp.c,v 1.1.6.11 2007/12/18 04:18:27 dgp Exp $
+ * RCS: @(#) $Id: nmakehlp.c,v 1.1.6.12 2008/05/16 15:05:37 dgp Exp $
  * ----------------------------------------------------------------------------
  */
 
@@ -23,10 +23,10 @@
 #include <math.h>
 
 /*
- * This library is required for x64 builds with _some_ versions
+ * This library is required for x64 builds with _some_ versions of MSVC
  */
 #if defined(_M_IA64) || defined(_M_AMD64)
-#if _MSC_FULL_VER > 140000000 && _MSC_FULL_VER <= 140040310
+#if _MSC_VER >= 1400 && _MSC_VER < 1500
 #pragma comment(lib, "bufferoverflowU")
 #endif
 #endif
